--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'http://localhost:1313/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+theme = "PaperMod"
