--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,7 @@
 backend:
-  name: github
+  name: git-gateway
   repo: vilois/circlelytics-hugo
   branch: master
-  api_root: https://api.netlify.com
-  site_id: wondrous-llama-f95062
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
