--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: vilois/circlelytics-hugo
   branch: master
+  base_url: https://wondrous-llama-f95062.netlify.app/
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
