--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
-  name: github
+  name: git-gateway
   repo: vilois/circlelytics-hugo
   branch: master
+  base_url: https://wondrous-llama-f95062.netlify.app/admin
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
