--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: master
-
+  base-url: https://wondrous-llama-f95062.netlify.app/admin
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 
