--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
   name: git-gateway
   branch: master
-  base-url: https://wondrous-llama-f95062.netlify.app/admin
+  base_url: "https://wondrous-llama-f95062.netlify.app/admin"
+  
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 
