--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-theme = "PaperMod"
+theme = "hugo-universal-theme"
 baseURL = "http://localhost:1313/"
 languageCode = "en-us"
 title = "My Hugo Site"
