--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://localhost:1313/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = "hugo-universal-theme"
+title = 'Circleytics'
+theme = "hugo-theme-cleanwhite"
