--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "npm run build"
+command = "npm install && npm run build"
 
 [context.production.environment]
 HUGO_VERSION = "0.90.0"
