--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css && hugo --minify"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.0.0",
