changed base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://wondrous-llama-f95062.netlify.app/"
 title = "Tella"
 author = "username"
 languageCode = "en"
