--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "concurrently npm:watch:*",
     "watch:tw": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css --watch",
     "watch:hugo": "hugo server --config config.toml",
-    "build": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css && hugo --minify"
+    "build": "tailwindcss -i ./themes/tella/assets/css/main.css -o ./themes/tella/assets/css/style.css && hugo --minify --config config.toml" 
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
