--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img
 collections:
   - name: "posts"
     label: "Posts"
-    folder: "content/post"
+    folder: "content/post/2020"
     create: true
     slug: "{{slug}}"
     extension: "md"
