--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -31,4 +31,7 @@ collections:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Layout", name: "layout", widget: "string", required: false }
           - { label: "Type", name: "type", widget: "string", required: false }
-          - { label: "Body", name: "body", widget: "markdown" }
+          - label: "Body"
+            name: "body"
+            widget: "markdown"
+            required: false
