added decal admin

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -24,14 +24,11 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-      - file: "content/contact/_index.md"
+      - file: "content/contact/index.md"
         label: "Contact"
         name: "contact"
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Layout", name: "layout", widget: "string", required: false }
           - { label: "Type", name: "type", widget: "string", required: false }
-          - label: "Body"
-            name: "body"
-            widget: "markdown"
-            required: false
+          - { label: "Body", name: "body", widget: "markdown" }
