--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,3 +32,9 @@ collections:
           - { label: "Layout", name: "layout", widget: "string", required: false }
           - { label: "Type", name: "type", widget: "string", required: false }
           - { label: "Body", name: "body", widget: "markdown" }
+      - file: "content/_index.md"         # 👈 Add this block
+        label: "Homepage"
+        name: "homepage"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
