--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
   repo: vilois/circlelytics-hugo
   base_url: https://wondrous-llama-f95062.netlify.app/admin
-media_folder: assets/img
-public_folder: /img
+media_folder: "static/img"
+public_folder: "/img"
 collections:
   - name: "posts_2020"
     label: "Posts / 2020"
