--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,6 @@
 [build.environment]
   HUGO_VERSION = "0.124.1" # or another known-good version
   HUGO_EXTENDED = "true"
+
+[functions]
+  directory = "netlify/functions"
