--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,11 +1,11 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master 
   repo: vilois/circlelytics-hugo
   base_url: https://wondrous-llama-f95062.netlify.app/admin
 media_folder: "static/img"
 public_folder: "/img"
-collections:
+collections:  
   - name: "posts_2020"
     label: "Posts / 2020" 
     folder: "content/post/2020"
