added contact form

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,9 @@
 
 [functions]
   directory = "netlify/functions"
+
+[[redirects]]
+  from = "/contact"
+  to = "/.netlify/functions/submission-created"
+  method = "POST"
+  status = 200
